--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <h1>Podcast player</h1>
-    <nav><a href="">Home</a><a href="">Documentation</a></nav>
+    <nav><a href="index.html">Home</a><a href="documentation.html">Documentation</a></nav>
   </header>
 
 
@@ -19,7 +19,7 @@
 	<div id="divInputRSS">
 		</br>
 		</br>
-		Please try with <strong> enter your URL  </strong>
+		Please <strong> enter your URL  </strong>rss
 		</br>
 	</div>
 
