--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Podcast player</title>
 	<script src="script.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="icon" type="image/png" href="favicon.ico" />
 </head>
 
 <body>
