--- a/documentation.html
+++ b/documentation.html
@@ -20,7 +20,7 @@
     <hr>
     <div id="docP1">
       <h3>Utilisation</h3>
-      <p>Le principe de cette application est simple. Vous devez entrez une <a href="#">URL</a> correspondant à un <a href="#">flux RSS</a>. Un fois validé en appuyant sur "Load flux" un tableau se rempli avec la liste des document RSS. Les documents Audio uniquement sont pris en charge.</p>
+      <p>Le principe de cette application est simple. Vous devez entrer une <a href="#">URL</a> correspondant à un <a href="#">flux RSS</a>. Un fois validée en appuyant sur "Load flux", un tableau se rempli avec la liste des documents RSS. Les documents Audio uniquement sont pris en charge.</p>
     </div>
   </div>
 
